--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "md5": "^2.3.0",
     "mysql": "^2.18.1",
     "nodemailer": "^6.6.3",
+    "socket.io": "^4.1.3",
     "util": "^0.12.4"
   }
 }
