elasticsearch friend suggestion

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ MAIL_PORT=2525
 MAIL_USER=ca9b9415b52699
 MAIL_PASSWORD=771fd40cde7e97
 MAIL_FROM_NAME=ngendika@rizqisyahrendra.tech
+
+ES_HOST=localhost
+ES_PORT=9200
