--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.6.3",
     "socket.io": "^4.1.3",
-    "util": "^0.12.4"
+    "util": "^0.12.4",
+    "yesql": "^5.0.0"
   }
 }
