--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 APP_NAME=Ngendika
 APP_ENV=local
+HOST=localhost
 PORT=5000
 
 DB_HOST=localhost
@@ -12,10 +13,10 @@ JWT_SECRET=123
 API_SECRET=123
 
 MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USER=ca9b9415b52699
-MAIL_PASSWORD=771fd40cde7e97
-MAIL_FROM_NAME=ngendika@rizqisyahrendra.tech
+MAIL_PORT=123
+MAIL_USER=abcabc
+MAIL_PASSWORD=abcabc
+MAIL_FROM_NAME=ngendika@domain.com
 
 ES_HOST=localhost
 ES_PORT=9200
