--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "migrate_es": "node migrations/mysql_to_elasticsearch.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test/*.js --exit",
     "start": "nodemon index.js"
   },
   "author": "",
@@ -15,12 +15,15 @@
     "@elastic/elasticsearch": "^7.14.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
+    "mocha": "^9.0.3",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
     "nodemailer": "^6.6.3",
